fix: add styles for body scrollbar [WTEL-8453](https://webitel.atlassian.net/browse/WTEL-8453)

--- a/src/app/css/main.scss
+++ b/src/app/css/main.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   @extend %typo-body-1;
+  @extend %wt-scrollbar;
   box-sizing: border-box;
   margin: 0;
   background: var(--wt-page-wrapper-background-color);
